<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDigit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_1"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDigit2"
        app:layout_constraintEnd_toStartOf="@+id/buttonDigit2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonDigit2"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDigit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/buttonDigit5"
        app:layout_constraintEnd_toEndOf="@+id/buttonDigit5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonDigit5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDigit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_3"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDigit2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonDigit2"
        app:layout_constraintTop_toTopOf="@+id/buttonDigit2"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDigit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_4"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDigit5"
        app:layout_constraintEnd_toStartOf="@+id/buttonDigit5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDigit2"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDigit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/buttonDigit8"
        app:layout_constraintEnd_toEndOf="@+id/buttonDigit8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonDigit8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDigit6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_6"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDigit5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonDigit5"
        app:layout_constraintTop_toBottomOf="@+id/buttonDigit2"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDigit7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_7"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDigit8"
        app:layout_constraintEnd_toStartOf="@+id/buttonDigit8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDigit5"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDigit8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/buttonDigit0"
        app:layout_constraintEnd_toEndOf="@+id/buttonDigit0"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonDigit0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDigit9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_9"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDigit8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonDigit8"
        app:layout_constraintTop_toBottomOf="@+id/buttonDigit5"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDigit0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOperatorPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/plus"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/buttonOperatorMinus"
        app:layout_constraintEnd_toStartOf="@+id/buttonOperatorMinus"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDigit0"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOperatorMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonDigit0"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonDigit0"
        app:layout_constraintTop_toBottomOf="@+id/buttonDigit0"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOperatorMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/multiply"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/buttonOperatorDivide"
        app:layout_constraintEnd_toStartOf="@+id/buttonOperatorDivide"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOperatorMinus"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOperatorDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonOperatorMinus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonOperatorMinus"
        app:layout_constraintTop_toBottomOf="@+id/buttonOperatorMinus"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/equals"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDigit0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonDigit0"
        app:layout_constraintTop_toBottomOf="@+id/buttonDigit8"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClearDisplay"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/clear"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonOperatorMinus"
        app:layout_constraintTop_toBottomOf="@+id/buttonDigit0"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDotInDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dot"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDigit0"
        app:layout_constraintEnd_toStartOf="@+id/buttonDigit0"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDigit8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewDisplayText"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:background="#FFFFFF"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingRight="8dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/buttonDigit2"
        app:layout_constraintEnd_toEndOf="@+id/buttonDigit3"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/buttonDigit1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioButtonsGroupChooseTheme"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonOperatorMultiply"
        app:layout_constraintTop_toBottomOf="@+id/buttonOperatorMultiply"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButtonCoolTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cool"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="491dp" />

        <RadioButton
            android:id="@+id/radioButtonLightTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="491dp"/>

        <RadioButton
            android:id="@+id/radioButtonDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="491dp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>